Fix overflow in the toolbar.

--- a/src/app/recordslist/recordslist.component.css
+++ b/src/app/recordslist/recordslist.component.css
@@ -167,9 +167,10 @@
 
 .listtoolbar {
 	margin-top: 10px;
-	margin-bottom: 20px;
+	margin-bottom: 10px;
 	width: 100%;
-	height: 36px;
+	min-height: 36px;
+	overflow: hidden;
 }
 
 .toolbarbutton {
